data/all_generated_tests/raw_wast_tests/nop_TypeMismatchinControlFlowInstructions_705.wast
;; 6. **Test for `nop` in Function Prologue with Multiple Locals**:    - **Description**: Create a function with several local variables followed by `nop` and validate the local stack initialization.    - **Constraint Checked**: Verifies local and operand stack consistency during function setup.    - **Relation**: Tests whether `nop` impacts the initial validation state of variables set up by functions, focusing on proper initialization handling.

(assert_invalid
  (module (func $local-test (local i32 i32) (nop)))
  "type mismatch"
)